--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@
 RewriteEngine On
 
 # Installation directory
-RewriteBase /qrwedding/
+RewriteBase /mwedding/
 
 # Protect hidden files from being viewed
 <Files .*>
